exports[`test will get everything needed in an introspection 1`] = `
Object {
  "attributes": Array [
    Object {
      "classId": "compound_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "person_id_2",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "compound_key",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "person_id_1",
      "num": 2,
      "typeId": "int4"
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "a",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "b",
      "num": 2,
      "typeId": "text"
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "c",
      "num": 3,
      "typeId": "color"
    },
    Object {
      "classId": "compound_type",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "d",
      "num": 4,
      "typeId": "uuid"
    },
    Object {
      "classId": "non_updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "?column?",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "person",
      "description": "The person’s name",
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "name",
      "num": 2,
      "typeId": "varchar"
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "about",
      "num": 3,
      "typeId": "text"
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "email",
      "num": 4,
      "typeId": "email"
    },
    Object {
      "classId": "person",
      "description": null,
      "hasDefault": true,
      "isNotNull": false,
      "kind": "attribute",
      "name": "created_at",
      "num": 5,
      "typeId": "timestamp"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "headline",
      "num": 2,
      "typeId": "text"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "body",
      "num": 3,
      "typeId": "text"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "author_id",
      "num": 4,
      "typeId": "int4"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "bigint",
      "num": 1,
      "typeId": "int8"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "boolean",
      "num": 2,
      "typeId": "bool"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "varchar",
      "num": 3,
      "typeId": "varchar"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "enum",
      "num": 4,
      "typeId": "color"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "domain",
      "num": 5,
      "typeId": "an_int"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "domain2",
      "num": 6,
      "typeId": "another_int"
    },
    Object {
      "classId": "types",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "compound_type",
      "num": 7,
      "typeId": "compound_type"
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "x",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "name",
      "num": 2,
      "typeId": "varchar"
    },
    Object {
      "classId": "updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "description",
      "num": 3,
      "typeId": "text"
    },
    Object {
      "classId": "updatable_view",
      "description": "This is constantly 2",
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "constant",
      "num": 4,
      "typeId": "int4"
    }
  ],
  "classes": Array [
    Object {
      "description": null,
      "id": "compound_key",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "compound_key",
      "namespaceId": "c",
      "typeId": "compound_key"
    },
    Object {
      "description": null,
      "id": "compound_type",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": false,
      "isUpdatable": false,
      "kind": "class",
      "name": "compound_type",
      "namespaceId": "c",
      "typeId": "compound_type"
    },
    Object {
      "description": null,
      "id": "non_updatable_view",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": true,
      "isUpdatable": false,
      "kind": "class",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "typeId": "non_updatable_view"
    },
    Object {
      "description": "Person test comment",
      "id": "person",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "person",
      "namespaceId": "c",
      "typeId": "person"
    },
    Object {
      "description": null,
      "id": "post",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "post",
      "namespaceId": "a",
      "typeId": "post"
    },
    Object {
      "description": null,
      "id": "types",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "types",
      "namespaceId": "b",
      "typeId": "types"
    },
    Object {
      "description": "YOYOYO!!",
      "id": "updatable_view",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "updatable_view",
      "namespaceId": "b",
      "typeId": "updatable_view"
    }
  ],
  "constraints": Array [
    Object {
      "classId": "person",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1
      ],
      "kind": "constraint",
      "name": "person_pkey",
      "type": "p"
    },
    Object {
      "classId": "person",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        4
      ],
      "kind": "constraint",
      "name": "person_email_key",
      "type": "u"
    },
    Object {
      "classId": "post",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1
      ],
      "kind": "constraint",
      "name": "post_pkey",
      "type": "p"
    },
    Object {
      "classId": "post",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1
      ],
      "keyAttributeNums": Array [
        4
      ],
      "kind": "constraint",
      "name": "post_author_id_fkey",
      "type": "f"
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        2,
        1
      ],
      "kind": "constraint",
      "name": "compound_key_pkey",
      "type": "p"
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1
      ],
      "keyAttributeNums": Array [
        1
      ],
      "kind": "constraint",
      "name": "compound_key_person_id_2_fkey",
      "type": "f"
    },
    Object {
      "classId": "compound_key",
      "foreignClassId": "person",
      "foreignKeyAttributeNums": Array [
        1
      ],
      "keyAttributeNums": Array [
        2
      ],
      "kind": "constraint",
      "name": "compound_key_person_id_1_fkey",
      "type": "f"
    }
  ],
  "namespaces": Array [
    Object {
      "description": "The a schema.",
      "id": "a",
      "kind": "namespace",
      "name": "a"
    },
    Object {
      "description": "qwerty",
      "id": "b",
      "kind": "namespace",
      "name": "b"
    },
    Object {
      "description": null,
      "id": "c",
      "kind": "namespace",
      "name": "c"
    }
  ],
  "types": Array [
    Object {
      "baseTypeId": Object {
        "baseTypeId": null,
        "category": "N",
        "classId": null,
        "description": "-2 billion to 2 billion integer, 4-byte storage",
        "enumVariants": null,
        "id": "23",
        "isNotNull": false,
        "itemId": null,
        "kind": "type",
        "name": "int4",
        "namespaceId": "11",
        "type": "b"
      },
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "an_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "an_int",
      "namespaceId": "a",
      "type": "d"
    },
    Object {
      "baseTypeId": Object {
        "baseTypeId": "23",
        "category": "N",
        "classId": null,
        "description": null,
        "enumVariants": null,
        "id": "1530543",
        "isNotNull": false,
        "itemId": null,
        "kind": "type",
        "name": "an_int",
        "namespaceId": "1530465",
        "type": "d"
      },
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "another_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "another_int",
      "namespaceId": "b",
      "type": "d"
    },
    Object {
      "baseTypeId": null,
      "category": "E",
      "classId": null,
      "description": null,
      "enumVariants": Array [
        "red",
        "green",
        "blue"
      ],
      "id": "color",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "color",
      "namespaceId": "b",
      "type": "e"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "compound_key",
      "description": null,
      "enumVariants": null,
      "id": "compound_key",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "compound_key",
      "namespaceId": "c",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "compound_type",
      "description": "Awesome feature!",
      "enumVariants": null,
      "id": "compound_type",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "compound_type",
      "namespaceId": "c",
      "type": "c"
    },
    Object {
      "baseTypeId": Object {
        "baseTypeId": null,
        "category": "S",
        "classId": null,
        "description": "variable-length string, no limit specified",
        "enumVariants": null,
        "id": "25",
        "isNotNull": false,
        "itemId": null,
        "kind": "type",
        "name": "text",
        "namespaceId": "11",
        "type": "b"
      },
      "category": "S",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "email",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "email",
      "namespaceId": "b",
      "type": "d"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "non_updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "non_updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "person",
      "description": null,
      "enumVariants": null,
      "id": "person",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "person",
      "namespaceId": "c",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "post",
      "description": null,
      "enumVariants": null,
      "id": "post",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "post",
      "namespaceId": "a",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "types",
      "description": null,
      "enumVariants": null,
      "id": "types",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "types",
      "namespaceId": "b",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "updatable_view",
      "namespaceId": "b",
      "type": "c"
    }
  ]
}
`;

exports[`test will get everything needed in an introspection 2`] = `
Object {
  "attributes": Array [
    Object {
      "classId": "non_updatable_view",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "?column?",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": true,
      "isNotNull": true,
      "kind": "attribute",
      "name": "id",
      "num": 1,
      "typeId": "int4"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": true,
      "kind": "attribute",
      "name": "headline",
      "num": 2,
      "typeId": "text"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "body",
      "num": 3,
      "typeId": "text"
    },
    Object {
      "classId": "post",
      "description": null,
      "hasDefault": false,
      "isNotNull": false,
      "kind": "attribute",
      "name": "author_id",
      "num": 4,
      "typeId": "int4"
    }
  ],
  "classes": Array [
    Object {
      "description": null,
      "id": "non_updatable_view",
      "isDeletable": false,
      "isInsertable": false,
      "isSelectable": true,
      "isUpdatable": false,
      "kind": "class",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "typeId": "non_updatable_view"
    },
    Object {
      "description": null,
      "id": "post",
      "isDeletable": true,
      "isInsertable": true,
      "isSelectable": true,
      "isUpdatable": true,
      "kind": "class",
      "name": "post",
      "namespaceId": "a",
      "typeId": "post"
    }
  ],
  "constraints": Array [
    Object {
      "classId": "post",
      "foreignClassId": null,
      "foreignKeyAttributeNums": null,
      "keyAttributeNums": Array [
        1
      ],
      "kind": "constraint",
      "name": "post_pkey",
      "type": "p"
    }
  ],
  "namespaces": Array [
    Object {
      "description": "The a schema.",
      "id": "a",
      "kind": "namespace",
      "name": "a"
    }
  ],
  "types": Array [
    Object {
      "baseTypeId": Object {
        "baseTypeId": null,
        "category": "N",
        "classId": null,
        "description": "-2 billion to 2 billion integer, 4-byte storage",
        "enumVariants": null,
        "id": "23",
        "isNotNull": false,
        "itemId": null,
        "kind": "type",
        "name": "int4",
        "namespaceId": "11",
        "type": "b"
      },
      "category": "N",
      "classId": null,
      "description": null,
      "enumVariants": null,
      "id": "an_int",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "an_int",
      "namespaceId": "a",
      "type": "d"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "non_updatable_view",
      "description": null,
      "enumVariants": null,
      "id": "non_updatable_view",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "non_updatable_view",
      "namespaceId": "a",
      "type": "c"
    },
    Object {
      "baseTypeId": null,
      "category": "C",
      "classId": "post",
      "description": null,
      "enumVariants": null,
      "id": "post",
      "isNotNull": false,
      "itemId": null,
      "kind": "type",
      "name": "post",
      "namespaceId": "a",
      "type": "c"
    }
  ]
}
`;
